@@ -56,6 +56,7 @@
 * Airwallex: QA fixes for option handling [therufs] #4367
 * CardConnect: Fixed duplicate(concat) Address sent - card_connect is concat. address1 and 2 causing a AVS error [ahmirza] #4362
 * CyberSource: Remove Pinless Debit Transaction Functionality [peteroas] #4370
+* Litle: Add support for Level 2 and 3 enhanced data [curiousepic] #4360
 
 == Version 1.125.0 (January 20, 2022)
 * Wompi: support gateway [therufs] #4173
